<resources>
    <string name="app_name">BlueTrace</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Health Report</string>
    <string name="title_notifications">Status</string>
    >>>>>>>> HEAD
    <string name="home_broadcast">Broadcast</string>
    <string name="home_question">What should you do if you are sick?</string>
    <string name="home_card1_text">Tap to dial 119 if you are having a medical emergency.</string>
    <string name="home_card2_title">Request a test.</string>
    <string name="home_card2_text">Tap if you are experiencing symptoms and want to get tested.</string>
    <string name="home_telephone">Telephone Icon</string>
    <string name="home_thermometer">Thermometer Icon</string>
    <string name="home_cdcLogo">CDC Logo</string>
    <string name="home_resources">Resources</string>
    <string name="home_cdcText">CDC Guidelines</string>
    =======
    <string name="new_report">+ New Report</string>
    <string name="report_info">Log your symptoms here</string>
    <string name="history">Your past symptoms:</string>
    <string name="dummyval1">Cough, Fever</string>
    <string name="dummyVal2">October 09, 2020</string>

    <string name="checkSymptomsHeader">COVID-19 Symptom Check</string>
    <string name="checkSymptomsPrompt">Check the symptoms that you are currently experiencing:</string>
    <string name="checkSoreThroat">Sore Throat</string>
    <string name="checkFever">Fever</string>
    <string name="checkNasalCongestion">Nasal Congestion</string>
    <string name="checkCough">Cough</string>
    <string name="checkSubmitButton">Submit Symptoms</string>


    <string name="exposures">Exposure Notifications</string>
    <string name="exposures_switch">On ></string>
    <string name="exposure_notifications">Enable Notifications</string>
    <string name="notification_info">You will be notified if you are exposed to COVID-19,\nExposure last checked Today at</string>
    <string name="change_stat">Update status</string>
    <string name="change_stat_switch">Negative ></string>
    <string name="my_status">My COVID-19 Status</string>
    <string name="exposures2">EXPOSURES IN PAST 14 DAYS</string>
    <string name="possible_exposure">Possible Exposure</string>
    <string name="exp_date">April 23, 2020</string>



    // -----------------UPDATE STATUS -----------------
    <string-array name="statuses">
        <item>Positive</item>
        <item>Negative</item>
    </string-array>


    // -----------------Exposure Notifications -----------------
    <string-array name="expNotif">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    >>>>>>> 0f983d241aa081e73a5f26e23a8d2465e0f0aee4
</resources>