<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:overScrollMode="never"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.home.HomeFragment">


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/broadcastSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/home_broadcast"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_home_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/home_question"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/dial119Card"
                android:layout_width="338dp"

                android:layout_height="87dp"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="25dp"
                app:cardElevation="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="251dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="109dp"
                        android:layout_marginLeft="109dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/home_card1_text"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="40dp"
                        android:layout_height="37dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="277dp"
                        android:layout_marginRight="277dp"
                        android:contentDescription="@string/home_telephone"
                        android:src="@drawable/phone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.833"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/requestTestCard"
                android:layout_width="336dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="25dp"
                app:cardElevation="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="129dp"
                        android:layout_marginLeft="129dp"
                        android:layout_marginTop="41dp"
                        android:layout_marginEnd="153dp"
                        android:layout_marginRight="153dp"
                        android:layout_marginBottom="123dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/home_card2_title"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.318"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.257" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="293dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="112dp"
                        android:layout_marginBottom="34dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/home_card2_text"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.627"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.655" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="45dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="277dp"
                        android:layout_marginRight="277dp"
                        android:layout_marginBottom="99dp"
                        android:contentDescription="@string/home_thermometer"
                        android:src="@drawable/thermometer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/home_resources"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cdcGuidelinesCard"
                android:layout_width="335dp"
                android:layout_height="95dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="25dp"
                app:cardElevation="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="159dp"
                        android:layout_marginLeft="159dp"
                        android:layout_marginEnd="127dp"
                        android:layout_marginRight="127dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/home_cdcText"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="97dp"
                        android:layout_height="73dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="246dp"
                        android:layout_marginRight="246dp"
                        android:contentDescription="@string/home_cdcLogo"
                        android:src="@drawable/cdc"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Placeholder
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>