<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.symptoms.SymptomsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="355dp"
            android:layout_height="450dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ListView
                android:id="@+id/symptoms_checklist_list_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:overScrollMode="never"

                android:padding="14dp"
                android:divider="@null"
                android:dividerHeight="12.5dp"
                tools:listitem="@layout/symptoms_checklist_item" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="184dp"
            android:layout_height="49dp"
            android:background="@drawable/add_reportbtn"
            android:text="@string/checkSubmitButton"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="315dp"
            android:layout_height="38dp"
            android:text="@string/checkSymptomsPrompt"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.876" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="323dp"
            android:layout_height="34dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/checkSymptomsHeader"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.361"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.596" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>